<resources>
    <string name="app_name">EBank</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="swipe_left_to_register">Swipe left to register</string>
    <string name="swipe_right_for_login">Swipe right for login</string>
    <string name="skycapitals">SkyCapitals</string>
    <string name="ebank">EBank</string>
    <string name="receive_card_number">Receive card number</string>
    <string name="send">Send</string>
    <string name="add_score">Add score</string>
    <string name="add_card">Add card</string>
    <string name="sum">Sum</string>
    <string name="pin">PIN</string>
</resources>